# turtle_catcher

./: README.md
install/: local_setup.sh  setup.sh
install/turtle_catcher/lib/turtle_catcher/: turtle_controller  turtle_spawner
install/turtle_catcher/share/turtle_catcher/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtle_catcher/share/turtle_catcher/cmake/: turtle_catcherConfig.cmake
install/turtle_catcher_bringup/share/turtle_catcher_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtle_catcher_interfaces/include/turtle_catcher_interfaces/msg/: alive_turtles.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  turtle.h  turtle.hpp
install/turtle_catcher_interfaces/share/turtle_catcher_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtle_catcher_interfaces/share/turtle_catcher_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  (+9 more)
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/turtle_catcher/: CMakeLists.txt
src/turtle_catcher/src/: turtle_controller.cpp  turtle_spawner.cpp
src/turtle_catcher_bringup/: CMakeLists.txt  package.xml
src/turtle_catcher_bringup/launch/: turtle_catcher_app.launch.py
src/turtle_catcher_interfaces/: CMakeLists.txt  package.xml
(+42 files in other folders)
